src/objects/fc_csc__Unidentified_Payment__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied to Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Unidentified Payments</relationshipLabel>
        <relationshipName>Unidentified_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Error_Message__c</fullName>
        <label>Kickout Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Lockbox_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lockbox Job</label>
        <referenceTo>fc_csc__Lockbox_Job__c</referenceTo>
        <relationshipLabel>Unidentified Payments</relationshipLabel>
        <relationshipName>Unidentified_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Original_Currency__c</fullName>
        <label>Original Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Number__c</fullName>
        <label>Payment Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Raw_Data__c</fullName>
        <label>Raw Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Universal_Invoice_Number__c</fullName>
        <label>Universal Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Zuora_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Unidentified Payments</relationshipLabel>
        <relationshipName>Unidentified_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unidentified Payment</label>
    <listViews>
        <fullName>Unapplied_Cash_Receipts</fullName>
        <columns>NAME</columns>
        <columns>fc_csc__Account_Name__c</columns>
        <columns>fc_csc__Status__c</columns>
        <columns>fc_csc__Payment_Type__c</columns>
        <columns>fc_csc__Payment_Method__c</columns>
        <columns>fc_csc__Payment_Amount__c</columns>
        <columns>fc_csc__Payment_Date__c</columns>
        <columns>fc_csc__Reference_Id__c</columns>
        <columns>fc_csc__Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>fc_csc__Status__c</field>
            <operation>equals</operation>
            <value>,New</value>
        </filters>
        <label>Unapplied Cash Receipts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>fc_csc__All</fullName>
        <columns>NAME</columns>
        <columns>fc_csc__Status__c</columns>
        <columns>fc_csc__Account_Name__c</columns>
        <columns>fc_csc__Account_Number__c</columns>
        <columns>fc_csc__Applied_Amount__c</columns>
        <columns>fc_csc__Error_Message__c</columns>
        <columns>fc_csc__Lockbox_Job__c</columns>
        <columns>fc_csc__Payment_Amount__c</columns>
        <columns>fc_csc__Payment_Date__c</columns>
        <columns>fc_csc__Payment_Number__c</columns>
        <columns>fc_csc__Reference_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UPN-{000000000}</displayFormat>
        <label>Unidentified Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unidentified Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>